@@ -6,9 +6,10 @@ import me.roinujnosde.titansbattle.TitansBattle;
 import me.roinujnosde.titansbattle.challenges.ArenaConfiguration;
 import org.jetbrains.annotations.NotNull;
 
+import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Objects;
 
 public class ArenasCompletion extends AbstractCompletion {
     public ArenasCompletion(TitansBattle plugin) {
@@ -23,17 +24,22 @@ public class ArenasCompletion extends AbstractCompletion {
     @Override
     public Collection<String> getCompletions(BukkitCommandCompletionContext context) throws InvalidCommandArgument {
         List<String> inUse = getChallengeManager().getRequests().stream()
-                .map(cr -> cr.getChallenge().getConfig().getName()).collect(Collectors.toList());
+                .map(cr -> cr.getChallenge().getConfig().getName())
+                .toList();
+
         if (context.hasConfig("in_use")) {
             return inUse;
         }
 
-        final boolean group = Boolean.parseBoolean(context.getConfig("group"));
-        List<String> arenas = getConfigurationDao().getConfigurations(ArenaConfiguration.class).stream()
-                .filter(a -> a.isGroupMode() == group).map(ArenaConfiguration::getName)
-                .collect(Collectors.toList());
-
+        List<String> arenas = getArenaList();
         arenas.removeAll(inUse);
         return arenas;
+    }
+
+    public List<String> getArenaList() {
+        return new ArrayList<>(getConfigurationDao().getConfigurations(ArenaConfiguration.class).stream()
+                .filter(Objects::nonNull)
+                .map(ArenaConfiguration::getName)
+                .toList());
     }
 }
