@@ -4,21 +4,41 @@ import me.roinujnosde.titansbattle.TitansBattle;
 import me.roinujnosde.titansbattle.events.GroupWinEvent;
 import me.roinujnosde.titansbattle.events.PlayerWinEvent;
 import me.roinujnosde.titansbattle.exceptions.CommandNotSupportedException;
-import me.roinujnosde.titansbattle.types.*;
+import me.roinujnosde.titansbattle.types.GameConfiguration;
+import me.roinujnosde.titansbattle.types.Group;
+import me.roinujnosde.titansbattle.types.Kit;
+import me.roinujnosde.titansbattle.types.Warrior;
+import me.roinujnosde.titansbattle.types.Winners;
 import me.roinujnosde.titansbattle.utils.Helper;
+import me.roinujnosde.titansbattle.utils.MessageUtils;
 import me.roinujnosde.titansbattle.utils.SoundUtils;
 import org.bukkit.Bukkit;
+import org.bukkit.attribute.Attribute;
+import org.bukkit.attribute.AttributeInstance;
 import org.bukkit.entity.Player;
+import org.bukkit.event.player.PlayerRespawnEvent;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import java.text.MessageFormat;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Set;
+import java.util.UUID;
 import java.util.function.Consumer;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
-import static me.roinujnosde.titansbattle.BaseGameConfiguration.Prize.*;
+import static me.roinujnosde.titansbattle.BaseGameConfiguration.Prize.FIRST;
+import static me.roinujnosde.titansbattle.BaseGameConfiguration.Prize.KILLER;
+import static me.roinujnosde.titansbattle.BaseGameConfiguration.Prize.SECOND;
+import static me.roinujnosde.titansbattle.BaseGameConfiguration.Prize.THIRD;
 
 public class EliminationTournamentGame extends Game {
     private final List<Duel<Warrior>> playerDuelists = new ArrayList<>();
@@ -32,6 +52,8 @@ public class EliminationTournamentGame extends Game {
     private boolean nextToWinIsFirstWinner = false;
     private boolean nextToLoseIsThirdWinner = false;
     private boolean battleForThirdPlace = false;
+
+    private final Map<UUID, Integer> hitsCount = new HashMap<>();
 
     public EliminationTournamentGame(TitansBattle plugin, GameConfiguration config) {
         super(plugin, config);
@@ -47,15 +69,15 @@ public class EliminationTournamentGame extends Game {
 
     private boolean isCurrentDuelist(@NotNull Warrior warrior) {
         if (!getConfig().isGroupMode()) {
-            return playerDuelists.size() != 0 && playerDuelists.get(0).isDuelist(warrior);
+            return !playerDuelists.isEmpty() && playerDuelists.get(0).isDuelist(warrior);
         }
-        return groupDuelists.size() != 0 && groupDuelists.get(0).isDuelist(getGroup(warrior));
+        return !groupDuelists.isEmpty() && groupDuelists.get(0).isDuelist(getGroup(warrior));
     }
 
     private List<Warrior> getDuelLosers(@NotNull Warrior defeated) {
         Group group = getGroup(defeated);
         if (group != null && getConfig().isGroupMode()) {
-            return casualties.stream().filter(p -> isMember(group, p)).collect(Collectors.toList());
+            return casualties.stream().filter(p -> isMember(group, p)).toList();
         }
         return Collections.singletonList(defeated);
     }
@@ -64,8 +86,7 @@ public class EliminationTournamentGame extends Game {
         List<Warrior> list = new ArrayList<>();
         if (getConfig().isGroupMode()) {
             Group winnerGroup = Objects.requireNonNull(groupDuelists.get(0).getOther(getGroup(defeated)));
-            list = getParticipants().stream().filter(p -> isMember(winnerGroup, p))
-                    .collect(Collectors.toList());
+            list = getParticipants().stream().filter(p -> isMember(winnerGroup, p)).toList();
         } else {
             Warrior other = playerDuelists.get(0).getOther(defeated);
             list.add(other);
@@ -90,6 +111,7 @@ public class EliminationTournamentGame extends Game {
 
     @Override
     protected void processRemainingPlayers(@NotNull Warrior warrior) {
+        plugin.debug("Processing remaining players in EliminationTournamentGame for " + warrior.getName());
         List<Warrior> duelLosers = getDuelLosers(warrior);
         if (!isCurrentDuelist(warrior)) {
             processNotCurrentDuelistLeaving(warrior, duelLosers);
@@ -104,9 +126,15 @@ public class EliminationTournamentGame extends Game {
     }
 
     private void processLoss(@NotNull Warrior warrior, List<Warrior> duelLosers) {
+        plugin.debug("Processing loss in EliminationTournamentGame for " + warrior.getName());
         battle = false;
+
         List<Warrior> duelWinners = getDuelWinners(warrior);
-        heal(duelWinners);
+        for (Warrior dw : duelWinners) {
+            Player player = dw.toOnlinePlayer();
+            if (player == null) continue;
+            heal(player);
+        }
         if (nextToLoseIsThirdWinner) {
             thirdPlaceWinners = duelLosers;
         }
@@ -131,6 +159,7 @@ public class EliminationTournamentGame extends Game {
     }
 
     private void processThirdPlaceBattle(List<Warrior> duelWinners) {
+        plugin.debug("Processing third place battle in EliminationTournamentGame");
         battleForThirdPlace = false;
         thirdPlaceWinners = duelWinners;
         teleport(duelWinners, getConfig().getWatchroom());
@@ -140,15 +169,16 @@ public class EliminationTournamentGame extends Game {
         }
     }
 
-    private void heal(List<Warrior> warriors) {
-        warriors.stream().map(Warrior::toOnlinePlayer).filter(Objects::nonNull).forEach(player -> {
-            player.setHealth(player.getMaxHealth());
-            player.setFoodLevel(20);
-            player.setFireTicks(0);
-        });
+    private void heal(@NotNull Player player) {
+        plugin.debug("Healing in EliminationTournamentGame for " + player.getName());
+        AttributeInstance attribute = player.getAttribute(Attribute.GENERIC_MAX_HEALTH);
+        if (attribute != null) player.setHealth(attribute.getDefaultValue());
+        player.setFoodLevel(20);
+        player.setFireTicks(0);
     }
 
     private void processLeavingDuringSemiFinals(@NotNull Warrior warrior) {
+        plugin.debug("Processing leaving during semi-finals in EliminationTournamentGame for " + warrior.getName());
         Player player = warrior.toOnlinePlayer();
         if (player == null) return;
 
@@ -157,6 +187,7 @@ public class EliminationTournamentGame extends Game {
     }
 
     private void processNotCurrentDuelistLeaving(@NotNull Warrior warrior, List<Warrior> duelLosers) {
+        plugin.debug("Processing not current duelists in EliminationTournamentGame for " + warrior.getName());
         removeDuelist(warrior);
         if (getPlayerOrGroupCount() == 2 && getWaitingThirdPlaceCount() == 1) {
             thirdPlaceWinners = new ArrayList<>(waitingThirdPlace);
@@ -184,14 +215,17 @@ public class EliminationTournamentGame extends Game {
     }
 
     @Override
-    public void onRespawn(@NotNull Warrior warrior) {
+    public void onRespawn(PlayerRespawnEvent event, @NotNull Warrior warrior) {
+        plugin.debug("Respawning in EliminationTournamentGame for " + warrior.getName());
         if (waitingThirdPlace.contains(warrior)) {
+            plugin.debug("Respawning in EliminationTournamentGame for " + warrior.getName() + " in third place battle");
             Player player = warrior.toOnlinePlayer();
             if (player == null) return;
             setKit(warrior);
-            teleport(warrior, getConfig().getLobby());
+            event.setRespawnLocation(getConfig().getLobby());
+            player.sendMessage(getLang("wait_for_third_place_fight"));
         } else {
-            super.onRespawn(warrior);
+            super.onRespawn(event, warrior);
         }
     }
 
@@ -263,7 +297,9 @@ public class EliminationTournamentGame extends Game {
 
     private void kickExcessive(@NotNull Set<Warrior> warriors) {
         participants.removeIf(warriors::contains);
-        Set<Player> players = warriors.stream().map(Warrior::toOnlinePlayer).filter(Objects::nonNull)
+        Set<Player> players = warriors.stream()
+                .map(Warrior::toOnlinePlayer)
+                .filter(Objects::nonNull)
                 .collect(Collectors.toSet());
         teleport(warriors, getConfig().getWatchroom());
         players.forEach(player -> {
@@ -286,7 +322,7 @@ public class EliminationTournamentGame extends Game {
 
     @NotNull
     private List<Group> getWaitingThirdPlaceGroups() {
-        return waitingThirdPlace.stream().map(this::getGroup).distinct().collect(Collectors.toList());
+        return new ArrayList<>(waitingThirdPlace.stream().map(this::getGroup).distinct().toList());
     }
 
     private void generateDuelists() {
@@ -308,16 +344,16 @@ public class EliminationTournamentGame extends Game {
         if (!getConfig().isGroupMode()) {
             generateDuelist(participants, playerDuelists);
         } else {
-            ArrayList<Group> groups = new ArrayList<>(getGroupParticipants().keySet());
+            List<Group> groups = new ArrayList<>(getGroupParticipants().keySet());
             generateDuelist(groups, groupDuelists);
         }
     }
 
-    private <T> void generateDuelist(List<T> list, List<Duel<T>> duelList) {
-        if (duelList.size() >= 1) {
+    private <T> void generateDuelist(List<T> list, @NotNull List<Duel<T>> duelList) {
+        if (!duelList.isEmpty()) {
             duelList.remove(0);
         }
-        if (duelList.size() < 1) {
+        if (duelList.isEmpty()) {
             Collections.shuffle(list);
             duelList.clear();
             for (int i = 0; i + 1 < list.size(); i = i + 2) {
@@ -327,6 +363,7 @@ public class EliminationTournamentGame extends Game {
     }
 
     private void startNextDuel() {
+        plugin.debug("Starting next duel in EliminationTournamentGame");
         if (getPlayerOrGroupCount() <= 1) {
             finish(false);
             return;
@@ -349,7 +386,7 @@ public class EliminationTournamentGame extends Game {
 
     @Override
     public @NotNull Collection<Warrior> getCurrentFighters() {
-        return getParticipants().stream().filter(this::isCurrentDuelist).collect(Collectors.toList());
+        return getParticipants().stream().filter(this::isCurrentDuelist).toList();
     }
 
     private void informOtherDuelists() {
@@ -375,7 +412,7 @@ public class EliminationTournamentGame extends Game {
                     }
                 }
                 return false;
-            }).collect(Collectors.toList());
+            }).toList();
             teleportToArena(warriors);
         }
     }
@@ -400,7 +437,7 @@ public class EliminationTournamentGame extends Game {
             if (group != null) {
                 name = group.getName();
             }
-        } else if (warriors != null && warriors.size() > 0) {
+        } else if (warriors != null && !warriors.isEmpty()) {
             name = warriors.get(0).getName();
         }
         return name;
@@ -415,21 +452,26 @@ public class EliminationTournamentGame extends Game {
         if (getConfig().isUseKits()) {
             firstPlaceWinners.forEach(Kit::clearInventory);
         }
+
+        firstPlaceWinners = new ArrayList<>(firstPlaceWinners);
         if (getConfig().isGroupMode() && firstGroup != null) {
             casualties.stream().filter(p -> isMember(firstGroup, p)).forEach(firstPlaceWinners::add);
-            firstPlaceWinners = firstPlaceWinners.stream().distinct().collect(Collectors.toList());
+            firstPlaceWinners = firstPlaceWinners.stream().distinct().toList();
             todayWinners.setWinnerGroup(getConfig().getName(), firstGroup.getName());
             GroupWinEvent event = new GroupWinEvent(firstGroup);
             Bukkit.getPluginManager().callEvent(event);
         }
+
         PlayerWinEvent event = new PlayerWinEvent(this, firstPlaceWinners);
         Bukkit.getPluginManager().callEvent(event);
+
         todayWinners.setWinners(getConfig().getName(), Helper.warriorListToUuidList(firstPlaceWinners));
         givePrizes(FIRST, firstGroup, firstPlaceWinners);
         givePrizes(SECOND, getAnyGroup(secondPlaceWinners), secondPlaceWinners);
         givePrizes(THIRD, getAnyGroup(thirdPlaceWinners), thirdPlaceWinners);
         SoundUtils.playSound(SoundUtils.Type.VICTORY, plugin.getConfig(), firstPlaceWinners, secondPlaceWinners,
                 thirdPlaceWinners);
+
         Warrior killer = findKiller();
         if (killer != null) {
             givePrizes(KILLER, null, Collections.singletonList(killer));
@@ -438,10 +480,13 @@ public class EliminationTournamentGame extends Game {
             discordAnnounce("discord_who_won_killer", killer.getName(), killsCount.get(killer));
             todayWinners.setKiller(getConfig().getName(), killer.getUniqueId());
         }
+
         broadcastKey("who_won_tournament", getWinnerName(firstPlaceWinners),
                 getWinnerName(secondPlaceWinners), getWinnerName(thirdPlaceWinners));
+
         discordAnnounce("discord_who_won_tournament", getWinnerName(firstPlaceWinners),
                 getWinnerName(secondPlaceWinners), getWinnerName(thirdPlaceWinners));
+
         firstPlaceWinners.forEach(warrior -> warrior.increaseVictories(getConfig().getName()));
     }
 
@@ -470,7 +515,7 @@ public class EliminationTournamentGame extends Game {
         return MessageFormat.format(gameInfo, firstDuel[0], firstDuel[1], builder.toString());
     }
 
-    private <D> void populateDuelsMessage(StringBuilder builder, List<Duel<D>> list, Function<D, String> getName) {
+    private <D> void populateDuelsMessage(StringBuilder builder, @NotNull List<Duel<D>> list, Function<D, String> getName) {
         String nextDuelsLineMessage = getLang("game_info_duels_line");
         if (list.size() > 1) {
             for (int i = 1; i < list.size(); i++) {
@@ -485,12 +530,26 @@ public class EliminationTournamentGame extends Game {
         return duels.size() > 1;
     }
 
-    private <D> String[] duelistsToNameArray(int index, List<Duel<D>> list, Function<D, String> getName) {
+    private <D> String @NotNull [] duelistsToNameArray(int index, @NotNull List<Duel<D>> list, Function<D, String> getName) {
         return list.get(index).getDuelists().stream().map(getName).toArray(String[]::new);
     }
 
     private boolean isMember(Group group, Warrior warrior) {
         return group.equals(getGroup(warrior));
+    }
+
+    public boolean onHit(Player attacker, Player victim) {
+        UUID attackerUUID = attacker.getUniqueId();
+        hitsCount.put(attackerUUID, hitsCount.getOrDefault(attackerUUID, 0) + 1);
+        if (hitsCount.get(attackerUUID) < getConfig().getHitAmount()) {
+            MessageUtils.sendActionBar(attacker, getLang("boxing_hit_count", hitsCount.get(attackerUUID), getConfig().getHitAmount()));
+            return true;
+        } else {
+            hitsCount.remove(attackerUUID);
+            hitsCount.remove(victim.getUniqueId());
+            plugin.debug(String.format("onHit() - kill player %s", victim.getName()));
+            return false;
+        }
     }
 
 }
