@@ -1,8 +1,8 @@
 package me.roinujnosde.titansbattle.managers;
 
+import me.roinujnosde.titansbattle.TitansBattle;
 import me.roinujnosde.titansbattle.games.Game;
 import me.roinujnosde.titansbattle.types.Group;
-import me.roinujnosde.titansbattle.TitansBattle;
 import me.roinujnosde.titansbattle.types.GroupData;
 import me.roinujnosde.titansbattle.types.Warrior;
 import me.roinujnosde.titansbattle.utils.Helper;
@@ -76,8 +76,7 @@ public abstract class GroupManager {
      * @return the built String
      */
     public @NotNull String buildStringFrom(@NotNull Collection<Group> groups) {
-        return Helper.buildStringFrom(groups.stream().filter(Objects::nonNull).map(Group::getName)
-                .collect(Collectors.toList()));
+        return Helper.buildStringFrom(groups.stream().filter(Objects::nonNull).map(Group::getName).toList());
     }
 
 }
