@@ -1,8 +1,8 @@
 package me.roinujnosde.titansbattle.managers;
 
+import me.roinujnosde.titansbattle.TitansBattle;
 import me.roinujnosde.titansbattle.types.Group;
 import me.roinujnosde.titansbattle.types.SimpleClansGroup;
-import me.roinujnosde.titansbattle.TitansBattle;
 import me.roinujnosde.titansbattle.utils.Helper;
 import net.sacredlabyrinth.phaed.simpleclans.Clan;
 import net.sacredlabyrinth.phaed.simpleclans.SimpleClans;
@@ -50,6 +50,6 @@ public class SimpleClansGroupManager extends GroupManager {
 
     @Override
     public @NotNull String buildStringFrom(@NotNull Collection<Group> groups) {
-        return Helper.buildStringFrom(groups.stream().map(Group::getId).collect(Collectors.toList()));
+        return Helper.buildStringFrom(groups.stream().map(Group::getId).toList());
     }
 }
