@@ -9,7 +9,6 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 import java.util.TreeMap;
-import java.util.stream.Collectors;
 
 public class ConfigUtils {
 
@@ -70,7 +69,7 @@ public class ConfigUtils {
 
     public static List<String> getEditableFields(@NotNull Class<?> clazz) {
         return getFields(clazz).stream().filter(ConfigUtils::isEditable).map(Field::getName)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public static String getPath(Field field) {
